--- a/src/styles.css
+++ b/src/styles.css
@@ -10,24 +10,28 @@ body {
   padding: 0;
   line-height: 1.6;
 }
-.git{
+
+a {
+  color: #64ffda; /* Cor do link */
+  text-decoration: none;
+}
+
+a:hover {
+  color: #64ffda; /* Cor ao passar o mouse */
+}
+
+.git {
   display: flex;
   color: #8892b0;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
 }
-a:hover {
-  color: #64ffda; /* Cor ao passar o mouse */
-}
-a {
-  color: #64ffda; /* Cor do link */
-  text-decoration: none;
-}
 
 header, nav, footer {
   background-color: #0a192f;
 }
+
 /* header */
 .logo {
   flex-shrink: 0;
@@ -37,13 +41,13 @@ header, nav, footer {
   background-color: transparent; /* Sem fundo para combinar com o design */
   width: 150px; /* Tamanho do quadrado */
   height: 150px; /* Tamanho do quadrado */
- 
 }
 
 .logo-image {
   max-width: 200px; /* Tamanho máximo da imagem dentro do quadrado */
   max-height: 200px; /* Tamanho máximo da imagem dentro do quadrado */
 }
+
 .resume-button {
   color: #64ffda;
   border: 1px solid #64ffda;
@@ -87,12 +91,12 @@ header, nav, footer {
   color: #0a192f;
 }
 
-/*home*/
+/* home */
 .home {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align:left;
+  text-align: left;
   align-items: center;
   min-height: 40vh;
   padding: 0 20px;
@@ -134,6 +138,7 @@ header, nav, footer {
   margin-bottom: 40px; /* Espaçamento abaixo */
   text-align: center; /* Centraliza o texto */
 }
+
 .resume-button {
   display: inline-block;
   color: #64ffda; /* Verde */
@@ -150,6 +155,7 @@ header, nav, footer {
   background-color: #64ffda; /* Fundo verde ao passar o mouse */
   color: #0a192f; /* Texto escuro */
 }
+
 /* projects */
 .project-list {
   display: flex;
@@ -158,61 +164,68 @@ header, nav, footer {
   padding: 2rem;
 }
 
-.project-item {
-  text-align: center;
-  background-color: #112240; /* Azul escuro */
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.project-title {
-  font-size: 1.8rem;
-  color: #64ffda; /* Verde */
-  margin-bottom: 1rem;
-}
-
-.image-carousel {
-  display: flex;
-  overflow-x: auto;
-  gap: 1rem;
-  padding: 1rem 0;
-}
-
-.image-carousel img {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
-}
-
-.project-description {
-  font-size: 1rem;
-  color: #ccd6f6; /* Texto claro */
-  margin-top: 1rem;
-}
 .project-card {
   border: 1px solid #64ffda;
   border-radius: 10px;
   padding: 20px;
   margin-bottom: 20px;
   background-color: #112240;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+/* Estilo do carrossel */
 .carousel {
+  position: relative;
   display: flex;
-  overflow-x: auto;
-  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .carousel img {
-  height: 400px;
-  width: auto;
-  border-radius: 5px;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 8px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.arrow.left {
+  left: 10px;
+}
+
+.arrow.right {
+  right: 10px;
+}
+
+.arrow:hover {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .project-card h3 {
   margin-bottom: 10px;
+  color: #64ffda;
 }
 
 .project-card p {
